fixed background flickering

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -11,7 +11,6 @@
         padding: 0 2em;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
         .Title {
             display: flex;
             & h1 {
